--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,8 @@
 @import "custom";
 @import "dashboard";
 @import "reddit";
+@import "main";
+@import "card";
+@import "footer";
+@import "nav";
+@import "chart";
