--- a/src/scss/_dashboard.scss
+++ b/src/scss/_dashboard.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -5,39 +7,17 @@
 }
 
 /* --------------------
-HeaderBar
--------------------- */
-
-.header-bar__container {
-	background-color: rgb(34, 44, 49);
-	display: flex;
-	justify-content: space-between;
-	padding: 2em 5% 0% 5%;
-}
-
-.header-bar__app-title {
-	color: white;
-}
-
-.header-bar__icon-container {
-	align-items: center;
-	display: flex;
-	justify-content: space-between;
-	width: 7em;
-}
-
-/* --------------------
 SearchBar
 -------------------- */
 .search-bar__container {
 	text-align: right;
-	margin: 1em 5% 2em 0;
+	margin: 1em 2% 1em 0;
 }
 
 .search-bar__input {
-	border: 1px solid rgb(82, 105, 117);
+	border: $light-border;
 	background-color: rgb(42, 54, 59);
-	color: white;
+	color: $white;
 	font-size: 1.1em;
 	padding: 0.5em;
 	margin: 0.5em 0em 0.5em 0.5em;
@@ -51,13 +31,18 @@ SearchBar
 /* --------------------
 CryptoTable
 -------------------- */
+
+.crypto-table__container {
+	margin:0 2%;
+}
+
 .crypto-table__table {
-	background: #2c373d;
-	border: 3px solid #2c373d;
-	color: rgba(255, 255, 255, 0.8);
+	background: $light-grey;
+	border: 3px solid $light-grey;
+	color: $white;
 	margin: 0 auto 0 auto;
 	padding-top: 1em;
-	width: 100%;
+	width:100%;
 }
 
 .crypto-table__sorting-arrows {
@@ -66,7 +51,7 @@ CryptoTable
 }
 
 .crypto-table__header-text {
-	color: white;
+	color: $white;
 }
 
 .crypto-table__checkbox {
@@ -78,7 +63,7 @@ CryptoTable
 }
 
 #crypto-table__header-row {
-	background-color: #2c373d;
+	background-color: $light-grey;
 	text-align: center;
 }
 
@@ -131,38 +116,15 @@ CryptoRows
 }
 
 .crypto-rows__row--light-up {
-	color: white;
+	color: $white;
 }
 
 /* --------------------
 REUSABLE STYLES
 -------------------- */
-.rotate-90 {
-	transform: rotate(90deg);
-}
-
-.center-text {
-	text-align: center;
-}
 
 .green-text {
 	color: #76ff72;
-}
-
-.white-text {
-	color: white;
-}
-
-.float-left {
-	float: left;
-}
-
-.float-right {
-	float: right;
-}
-
-.opaque {
-	opacity: 0;
 }
 
 .red-text {
@@ -173,9 +135,6 @@ REUSABLE STYLES
 	color: green;
 }
 
-.small-text {
-	font-size: 80%;
-}
 
 /* --------------------
 MEDIA QUERIES
@@ -206,6 +165,7 @@ MEDIA QUERIES
 	}
 
 	.header-bar__container {
+		flex-direction:row;
 		justify-content: center;
 		padding: 0.75em 5% 0% 5%;
 	}
@@ -226,6 +186,7 @@ MEDIA QUERIES
 
 	.crypto-table__table {
 		width: 100%;
+
 	}
 
 	.crypto-table__sorting-arrows {
